--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/MainPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/MainPage.xaml
@@ -1,13 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TabbedPage_with_NavigationPage"
              x:Class="TabbedPage_with_NavigationPage.MainPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+
+    <NavigationPage Title="ボディー統計" Icon="ic_home.png">
+        <x:Arguments>
+            <local:GraphPage />
+        </x:Arguments>
+    </NavigationPage>
+    <NavigationPage Title="記録" Icon="ic_home.png">
+        <x:Arguments>
+            <local:RecordListPage />
+        </x:Arguments>
+    </NavigationPage>
+    <NavigationPage Title="RM計算" Icon="ic_home.png">
+        <x:Arguments>
+            <local:RMPage />
+        </x:Arguments>
+    </NavigationPage>
+    
+</TabbedPage>
