--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/GraphPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/GraphPage.xaml
@@ -7,10 +7,11 @@
              Title="ボディー統計">
     <ContentPage.Content>
         <StackLayout Orientation="Vertical"
-                     Spacing="15" BackgroundColor="Purple">
+                     Spacing="15"  BackgroundColor="YellowGreen">
 
             <Label Text="   "/>
-
+            <StackLayout  Orientation="Vertical"
+                     Spacing="15" BackgroundColor="OrangeRed">
             <oxy:PlotView Model="{Binding Model}"
                    VerticalOptions="FillAndExpand"
                    HorizontalOptions="FillAndExpand">
@@ -18,7 +19,7 @@
                     <local:LineChart />
                 </oxy:PlotView.BindingContext>
             </oxy:PlotView>
-
+            </StackLayout>
 
             <StackLayout Orientation="Horizontal"
                          Spacing="55">
