--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/MainPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/MainPage.xaml
@@ -23,5 +23,18 @@
         </x:Arguments>
     </NavigationPage>
     
+    <NavigationPage Title="記録" Icon="ic_assignment_2x.png">
+        <x:Arguments>
+            <local:LogDetailPage />
+        </x:Arguments>
+    </NavigationPage>
+
+    <NavigationPage Title="記録" Icon="ic_assignment_2x.png">
+        <x:Arguments>
+            <local:LogPage />
+        </x:Arguments>
+    </NavigationPage>
+
+
 
 </TabbedPage>
