--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TopPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TopPage.xaml
@@ -4,9 +4,10 @@
              x:Class="TabbedPage_with_NavigationPage.TopPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Button Text="編集"
+                    Clicked="Button_Clicked"
+                    FontSize="20"
+                    HorizontalOptions="EndAndExpand"/>
             
         </StackLayout>
     </ContentPage.Content>
