--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/LogPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/LogPage.xaml
@@ -5,7 +5,7 @@
               Title="ログ">
     <ContentPage.Content>
         
-        <StackLayout Spacing="30">
+        <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
