--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TopPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TopPage.xaml
@@ -4,10 +4,9 @@
              x:Class="TabbedPage_with_NavigationPage.TopPage">
     <ContentPage.Content>
         <StackLayout>
-            <Button Text="編集"
-                    Clicked="Button_Clicked"
-                    FontSize="20"
-                    HorizontalOptions="EndAndExpand"/>
+            <<Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />/>
             
         </StackLayout>
     </ContentPage.Content>
