--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TopPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/TopPage.xaml
@@ -4,7 +4,7 @@
              x:Class="TabbedPage_with_NavigationPage.TopPage">
     <ContentPage.Content>
         <StackLayout>
-            <<Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Welcome to Xamarin.Forms!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
             
