--- a/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/MainPage.xaml
+++ b/TabbedPage with NavigationPage/TabbedPage_with_NavigationPage/MainPage.xaml
@@ -11,6 +11,11 @@
         </x:Arguments>
     </NavigationPage>
 
+    <Button Text="編集"
+            Clicked="Button_Clicked"
+            FontSize="15"
+            HorizontalOptions="EndAndExpand"/>
+
     <NavigationPage Title="ボディー統計" Icon="ic_accessibility_2x.png">
         <x:Arguments>
             <local:GraphPage />
